align-items: center; for header section

--- a/Virachai.html
+++ b/Virachai.html
@@ -182,7 +182,7 @@
       /* Mobile styles */
       @media (max-width: 600px) {
         #header > div {
-          align-content: center;
+          align-items: center;
         }
         #header .menu {
           display: none;
